--- a/Level_1/.project
+++ b/Level_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Level_1_1</name>
+	<name>Level_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
